clusteroperator/amqbroker/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    ActiveMQArtemis: amq-broker-prod
    application: amq-broker-prod-app
    statefulset.kubernetes.io/pod-name: amq-broker-prod-ss-0
  name: amq-broker-prod-amqp-0-svc-rte
  namespace: amq-broker
spec:
  host: amq-broker-prod-amqp-0-svc-rte-amq-broker.apps.cluster-tq9x2.dynamic.redhatworkshops.io
  port:
    targetPort: amqp-0
  tls:
    insecureEdgeTerminationPolicy: None
    termination: passthrough
  to:
    kind: Service
    name: amq-broker-prod-amqp-0-svc
    weight: 100
  wildcardPolicy: None
